changed the placeholders to icon and fixed layout issue

--- a/client/src/css/SingleResultCard.css
+++ b/client/src/css/SingleResultCard.css
@@ -11,6 +11,9 @@
     box-sizing: border-box;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+    min-width:100%;
+    min-height:100%;
+    
 }
 
 .card{
